<resources>
    <string name="app_name">Tour App</string>

    <!-- TODO: Remove or change this placeholder text -->

    <string name="category_viewSite">Places to visit</string>
    <string name="category_restaurants">Restaurants</string>
    <string name="category_brunch">Brunch places</string>
    <string name="category_phrases">Useful phrases</string>
    <string name="category_nightLife">Night Life</string>
    <string name="about"> About</string>
</resources>
