<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.android.tourapp.MainActivity"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

<LinearLayout
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

        <android.support.v7.widget.Toolbar
            android:id="@+id/my_toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            android:padding="4dp"
            android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
            app:popupTheme="@style/ThemeOverlay.AppCompat.Light">

            <Button
                android:layout_width="50dp"
                android:layout_height="match_parent"
                android:padding="5dp"
                android:id="@+id/btn1"
                android:clickable="true"
                android:background="@drawable/ic_settings_white_24dp" />
            </android.support.v7.widget.Toolbar>

        <!-- Colors category -->
        <FrameLayout
            android:id="@+id/frame_viewSites"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:background="@color/color_viewstop"
            android:gravity="center_horizontal"
            android:clickable="true"
            android:layout_marginBottom="4dp">

            <ImageView
                android:layout_width="88dp"
                android:layout_height="88dp"
                android:src="@drawable/ic_local_play"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="20dp" />
            <TextView
                android:id="@+id/viewSites"
                android:layout_marginTop="110dp"
                style="@style/CategoryStyle"
                android:background="?android:attr/selectableItemBackground"
                android:text="@string/category_viewSite"
                android:layout_gravity="center_horizontal" />
        </FrameLayout>

        <FrameLayout
            android:id="@+id/frame_brunch"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:background="@color/color_brunch"
            android:paddingRight="10dp"
            android:paddingLeft="10dp"
            android:gravity="center_horizontal"
            android:layout_marginBottom="4dp"
            android:clickable="true">

            <ImageView
                android:layout_width="88dp"
                android:layout_height="88dp"
                android:src="@drawable/ic_local_cafe_white_24dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="20dp" />
            <TextView
                android:layout_marginTop="110dp"
                style="@style/CategoryStyle"
                android:background="?android:attr/selectableItemBackground"
                android:text="@string/category_brunch"
                android:layout_gravity="center_horizontal" />
        </FrameLayout>



        <FrameLayout
            android:id="@+id/frame_restaurants"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:background="@color/color_restaurants"
            android:gravity="center_horizontal"
            android:layout_marginBottom="4dp"
            android:padding="5dp"
            android:clickable="true">

            <ImageView
                android:layout_width="88dp"
                android:layout_height="88dp"
                android:src="@drawable/ic_restaurant_white_24dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="20dp" />
            <TextView
                android:id="@+id/restaurants"
                android:layout_marginTop="110dp"
                style="@style/CategoryStyle"
                android:background="?android:attr/selectableItemBackground"
                android:text="@string/category_restaurants"
                android:layout_gravity="center_horizontal" />
        </FrameLayout>

        <FrameLayout
            android:id="@+id/frame_nightLife"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:background="@color/color_nightLife"
            android:paddingRight="10dp"
            android:paddingLeft="10dp"
            android:gravity="center_horizontal"
            android:layout_marginBottom="4dp"
            android:clickable="true">

            <ImageView
                android:layout_width="88dp"
                android:layout_height="88dp"
                android:src="@drawable/ic_bar"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="20dp" />
            <TextView
                android:id="@+id/nightLife"
                android:layout_marginTop="110dp"
                style="@style/CategoryStyle"
                android:background="?android:attr/selectableItemBackground"
                android:text="@string/category_nightLife"
                android:layout_gravity="center_horizontal" />
        </FrameLayout>


        <FrameLayout
            android:id="@+id/frame_phrase"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:background="@color/color_phrases"
            android:gravity="center_horizontal"
            android:clickable="true"
            android:layout_marginBottom="4dp">

            <ImageView
                android:layout_width="88dp"
                android:layout_height="88dp"
                android:src="@drawable/ic_g_translate_white_24dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="20dp" />
            <TextView
                android:id="@+id/phrases"
                android:layout_marginTop="110dp"
                style="@style/CategoryStyle"
                android:background="?android:attr/selectableItemBackground"
                android:text="@string/category_phrases"
                android:layout_gravity="center_horizontal" />
        </FrameLayout>



    </LinearLayout>

</ScrollView>
